# hydromt-plugin-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.yaml
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml  purge_all_caches.yml  refresh-cache.yml  tests.yml  tests_dev.yml
{{cookiecutter.project_slug}}/docs/: _quarto.yml  index.qmd  references.bib
{{cookiecutter.project_slug}}/docs/contributing/: index.qmd
{{cookiecutter.project_slug}}/docs/getting_started/: installation.qmd
{{cookiecutter.project_slug}}/docs/python/: index.qmd
{{cookiecutter.project_slug}}/docs/user_guide/: index.qmd  {{cookiecutter.model_shortname}}.qmd
{{cookiecutter.project_slug}}/tests/: conftest.py  test_dummy.py  test_{{cookiecutter.model_shortname}}.py  test_{{cookiecutter.model_shortname}}_methods.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init.py  __init__.py  {{ cookiecutter.main_file }}.py  {{ cookiecutter.model_shortname }}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/workflows/: __init__.py
